components/compat-table/index-desktop.css
/* Compat (desktop) */

@media (--screen-small-and-wider) {
  .bc-table {
    /* Expand all columns. */
    grid-template-columns: minmax(20vw, min-content) repeat(
        var(--compat-browser-count),
        auto
      );

    thead {
      display: contents;

      .bc-platforms {
        th {
          vertical-align: revert;
        }
      }
    }

    tbody {
      --border: 1px solid var(--color-border-primary);

      /* Border. */
      tr {
        &:not(:first-child) {
          th,
          td {
            > * {
              border-top: var(--border);
            }
          }

          .bc-feature {
            border-top: var(--border);
          }
        }

        th:not(:first-child),
        td:not(:first-child) {
          > * {
            border-left: var(--border);
          }
        }
      }
    }

    td,
    th {
      padding: 0.25rem;
      background: inherit;
    }

    td.bc-support {
      padding: 0;

      > button {
        padding: 0.25rem;
      }
    }

    button[aria-expanded="false"] ~ .timeline {
      display: none;
    }

    .timeline {
      border-top: var(--border);
      border-left: none !important;
    }

    .bc-has-history {
      & > button[aria-expanded="true"] {
        /* Highlight expanded item. */
        --padding-bottom-offset: -2px;
        border-bottom: 2px solid var(--color-border-primary);
      }

      > button:hover {
        background: var(--color-background-secondary);
      }
    }
  }

  /* TODO: removed to stop overflowing
  .table-container {
    width: 100vw;
    margin: 0 -3rem;
    overflow: auto;
  } */

  .table-container-inner {
    position: relative;

    /* TODO: removed to stop overflowing
    min-width: max-content;
    padding: 0 3rem; */

    &::after {
      position: absolute;
      right: 0;
      bottom: 0;

      width: 10px;
      height: 10px;

      content: "";
    }
  }

  .bcd-cell-text-wrapper {
    .bc-support-level,
    .bc-browser-name {
      display: none;
    }
  }

  .bc-notes-list {
    width: auto;
    max-width: 80vw;
    margin-left: 20%;
  }

  .bc-support {
    .bc-support-level {
      display: none;
    }
  }
}

